--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
+    "react-hooks-useform": "^0.1.84",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
