--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "react-hook-form": "^6.15.1",
     "react-hooks-useform": "^0.1.84",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.0-rc3",
+    "redux": "^4.0.5",
+    "redux-axios": "0.0.2",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
