--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i": "^0.3.6",
     "npm": "^6.14.11",
     "ol": "^6.5.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-v5": "^1.4.0",
@@ -23,9 +24,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.0-rc3",
+    "react-use-previous": "^1.0.0",
     "redux": "^4.0.5",
     "redux-axios": "0.0.2",
     "redux-thunk": "^2.3.0",
+    "use-previous": "^1.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
